--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
                 android:textColor="#ffffff"
                 android:inputType="textPersonName"
                 android:maxLines="1"
+                android:maxLength="10"
                 android:singleLine="true" />
 
 
@@ -55,6 +56,7 @@
                 android:textColorHint="#ffffff"
                 android:textColor="#ffffff"
                 android:inputType="textPassword"
+                android:maxLength="10"
                 android:maxLines="1"
                 android:singleLine="true" />
 
