--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -15,6 +15,14 @@
             android:layout_width="fill_parent"
             android:orientation="vertical"
             >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/test"
+                android:layout_gravity="center_horizontal|top"
+                android:textColor="#ffffff" />
+
             <com.jjoe64.graphview.GraphView
              android:layout_width="match_parent"
              android:layout_height="200dip"
